  IEntityDbRemoteServerAdmin.getDatabase.getConnectionPoolStats() renamed to getConnectionPoolStatistics
  IEntityDbRemoteServerAdmin.getDatabase.getDatabaseStats() renamed to getDatabaseStatistics
  DbConnection does not call IDatabase.onDisconnect() on logout since it obviously wreaks havoc when an embedded database is running in the server
  IDatabase.onDisconnect() renamed to shutdownEmbedded(), which is called in the server on exit and in EntityDbLocalProvider on logout
  Util.addAcceptSingleFileDragAndDrop() moved to UiUtil
  FrameworkUIUtil.createComboBox() now calls UiUtil.transferFocusOnEnter for both the combobox and the editor component, it now works for uneditable boxes as well
  All unit test classes renamed ...Test from Test...
  AbstractDateMaskFormat.getDateMask() is no longer abstract
  AbstractDateMaskFormat renamed to DateMaskFormat
  EntityBindingPanel.createDateInputPanel(propertyID) added, uses the default short date format
  EntityDbRemoteServerAdmin refactored out of EntityDbRemoteServer, exported on seperate port, changes in dist ant target and run files
  FrameworkConstants.SERVER_ADMIN_PORT_PROPERTY added
  EntityDbRemoteServer.shutdown() now exits properly by simply unexporting the remote object, no call to System.exit() necessary
  EntityDbRemoteAdapter now unexports itself on logout
  Updated source copyright notice where needed, removed it from 3d party files
  deploy targets in ant build file use chmod to make .sh files executable
  initialize_h2_db.sql fixed and renamed create_h2_db.sql, create_h2_db ant target changed accordingly
  run_rmi_registry.bat/sh files added to resources/server as well as resources/security/all_permissions.policy for running the registry
  build.xml cleaned up, removed dist/version and current directories, removed deploy target
  EntityDbRemoteProvider moved to server.provider
  Ant build file cleanup
  DateTextPropertyLink improved somewhat
  Event, removed name field