@@ -28,7 +28,6 @@ lib.jfreechart.base=lib/jfreechart-1.0.12.jar
 lib.jfreechart.common=lib/jcommon-1.0.15.jar
 lib.derby=lib/derby/derby.jar
 lib.derby.tools=lib/derby/derbytools.jar
-lib.derby.run=lib/derby/derbyrun.jar
 lib.h2=lib/h2-1.1.114.jar
 
 #build properties
