@@ -432,6 +432,7 @@
       <jvmarg value="-Djminor.server.pooling.initial=scott"/>
       <jvmarg value="-Djminor.server.logging.status=1"/>
       <jvmarg value="-Djminor.server.port=2222"/>
+      <jvmarg value="-Djminor.server.admin.port=4444"/>
       <jvmarg value="-Djminor.server.db.port=3333"/>
       <jvmarg value="-Djavax.net.ssl.keyStore=${basedir}/resources/security/JMinorServerKeystore"/>
       <jvmarg value="-Djava.security.policy=${basedir}/resources/security/jminor_server.policy"/>
@@ -451,13 +452,21 @@
         <pathelement location="${lib.jfreechart.common}"/>
         <pathelement location="${lib.jcalendar}"/>
       </classpath>
-      <jvmarg value="-Djminor.db.type=${run.db.type}"/>
-      <jvmarg value="-Djminor.db.host=${run.db.host}"/>
-      <jvmarg value="-Djminor.db.port=${run.db.port}"/>
-      <jvmarg value="-Djminor.db.sid=${run.db.sid}"/>
       <jvmarg value="-Djminor.server.hostname=localhost"/>
-      <jvmarg value="-Djavax.net.ssl.keyStore=${basedir}/resources/security/JMinorClientTruststore"/>
+      <jvmarg value="-Djavax.net.ssl.trustStore=${basedir}/resources/security/JMinorClientTruststore"/>
       <jvmarg value="-Djava.security.policy=${basedir}/resources/security/jminor_server_monitor.policy"/>
+    </java>
+  </target>
+
+  <target name="run_rmi_registry" depends="build"
+          description="Runs the RMI registry">
+    <java classname="sun.rmi.registry.RegistryImpl" fork="yes">
+      <classpath>
+        <pathelement path="${build.base}"/>
+        <pathelement location="${lib.log4j}"/>
+        <pathelement location="${lib.jasperreports.base}"/>
+      </classpath>
+      <jvmarg value="-Djava.security.policy=${basedir}/resources/security/all_permissions.policy"/>
     </java>
   </target>
 
@@ -497,22 +506,6 @@
           the EmpDept schema as well as the Petstore schema, used by unit tests and demo applications">
     <java fork="true" classname="org.h2.tools.RunScript" classpathref="libraries">
       <arg line="-url jdbc:h2:${db.h2.dir}/${db.h2.name} -script ${basedir}/resources/db/scripts/create_h2_db.sql -showResults"/>
-    </java>
-  </target>
-
-  <target name="run_derby_server" depends="create_derby_db"
-          description="Runs the derby network server">
-    <java fork="true" jar="${lib.derby.run}" classpathref="libraries">
-      <arg value="server"/>
-      <arg value="start"/>
-    </java>
-  </target>
-
-  <target name="shutdown_derby_server"
-          description="Shuts down the derby network server">
-    <java fork="true" jar="${lib.derby.run}" classpathref="libraries">
-      <arg value="server"/>
-      <arg value="shutdown"/>
     </java>
   </target>
 </project>
