@@ -1,5 +1,4 @@
 #file structure properties
-elibdir=../../../../3DParty/trunk/elib
 src=src
 srctest=srctest
 build.root=classes
@@ -12,18 +11,6 @@ test=test
 reports=test/report
 htmlreports=test/report/html
 lib=lib
-
-#libraries relative to ${elibdir}
-lib.jminor=jminor/1.0b/jminor.jar
-lib.jdbc=jdbc/lib/ojdbc14.jar
-lib.jcalendar=jcalendar/lib/jcalendar.jar
-lib.log4j=log4j/1.2.15/log4j-1.2.15.jar
-lib.jasperreports.base=jasperreports/jasperreports-1.2.5/jasperreports-1.2.5.jar
-lib.junit=junit/junit.jar
-
-#cvs properties
-cvspassfile=${user.home}/.cvspass
-cvsroot=:pserver:${user.name}@<cvs_host>:2401:<cvs_path>
 
 #junit test properties
 junit.db.type=oracle
